syntax = "proto3";

option optimize_for = CODE_SIZE;

message Message {
    repeated RawReport reports = 1;
}

message RawReport {
    string id = 1;
    int32 size = 2;
    string target = 3;
    map<string, RawOperationMapRecord> map = 4;
    repeated RawOperation operations = 5;
}

message RawOperationMapRecord {
    string key = 1;
    string operation = 2;
    optional string operationName = 3;
    repeated string fields = 4;
}

message RawOperation {
    string operationMapKey = 1;
    int32 timestamp = 2;
    optional int32 expiresAt = 3;
    Execution execution = 4;
    optional Metadata metadata = 5;
}

message Execution {
    bool ok = 1;
    int32 duration = 2;
    int32 errorsTotal = 3;
}

message Metadata {
    optional Client client = 1;
}

message Client {
    optional string name = 1;
    optional string version = 2;
}
  